--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Od teď můžete během Signal hovoru reagovat jakýmkoliv emoji. Můžete přidat úsměv, srdíčko tomu, kdo volá, že ho máte rádi, nebo hlasovat pro suši místo pizzy – a nemusíte říct ani slovo. A pokud během hovoru zareaguje dostatečný počet lidí najednou stejným emoji, uvidíte dokonce animaci všech emoji.
