--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Jetzt kannst du bei einem Signal-Anruf mit einem beliebigen Emoji reagieren. Lächle, auch wenn deine Kamera ausgeschaltet ist, sende ein Herz, wenn dir gefällt, was du hörst, oder stimme für Sushi statt Pizza, ohne ein Wort zu sagen. Und du siehst sogar eine Animation der Emoji-Antworten aller Teilnehmer, wenn genug Leute gleichzeitig mit demselben Emoji reagieren.
