--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Τώρα μπορείς να αντιδράσεις με οποιοδήποτε emoji κατά τη διάρκεια μιας κλήσης Signal. Χαμογέλα ακόμα και αν η κάμερά σου είναι κλειστή, στείλε μια καρδιά αν σου αρέσει αυτό που ακούς ή ψήφισε για σούσι αντί για πίτσα χωρίς να πεις λέξη.
