--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Da ora puoi reagire con qualsiasi emoji che vuoi durante una chiamata su Signal. Sorridi con uno smile anche se la fotocamera è spenta, invia un cuore a chi se lo merita, vota per sushi o pizza scegliendo l'emoji giusta (o per una bella spaghettata, se preferisci). E vedrai anche un'animazione speciale se più persone reagiscono contemporaneamente nella chiamata usando la stessa emoji.
