--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Je kunt nu tijdens een Signal-oproep reageren met elke emoji. Glimlach, ook met je camera uit, deel een hartje als je blij wordt van wat iemand zegt, of stem op sushi in plaats van pizza zonder een woord te zeggen. Je ziet zelfs een animatie van emojitionele uitbarstingen als genoeg mensen in het gesprek tegelijk met dezelfde emoji reageren.
