--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Acum poți reacționa cu orice emoji în timpul unui apel Signal. Zâmbește chiar dacă aparatul de fotografiat este oprit, împărtășește o inimă dacă îți place ceea ce auzi sau votează pentru sushi în loc de pizza fără să spui un cuvânt. Și vei vedea chiar și un emoji al izbucnirii emoționale a tuturor, dacă un număr suficient de mare de persoane din apel reacționează cu același emoji deodată.
