--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Теперь вы можете реагировать с помощью любого эмодзи во время звонка Signal. Улыбайтесь, даже если ваша камера выключена, делитесь сердечками, если вам нравится то, что вы слышите, или голосуйте за суши вместо пиццы, не сказав ни слова. И вы даже увидите анимацию вспышки гнева, если достаточное количество участников звонка отреагируют одним и тем же эмодзи одновременно.
