--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Artık Signal araması sırasında bir emoji ile tepki verebilirsin. Kameran kapalıysa bile gülümse, duyduğun şeyi seviyorsan bir kalp paylaş ya da tek kelime bile etmeden pizza yerine döneri oyla. Hatta aramada yeterli sayıda kişi aynı anda aynı emojiyle tepki verirse herkesin emoji patlamasının bir animasyonunu bile görürsün.
