--- a/Signal/translations/bn.lproj/Localizable.strings
+++ b/Signal/translations/bn.lproj/Localizable.strings
@@ -2708,10 +2708,10 @@
 "GET_STARTED_CARD_APPEARANCE" = "অ্যাপিয়ারেন্স";
 
 /* 'Get Started' button direction users to avatar builder */
-"GET_STARTED_CARD_AVATAR_BUILDER" = "ফটো যোগ করুন";
+"GET_STARTED_CARD_AVATAR_BUILDER" = "ছবি যোগ করুন";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "বন্ধুকে আমন্ত্রণ জানান";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "আমন্ত্রণ দিন";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "নতুন গ্রুপ";
