--- a/Signal/translations/cs.lproj/Localizable.strings
+++ b/Signal/translations/cs.lproj/Localizable.strings
@@ -2711,7 +2711,7 @@
 "GET_STARTED_CARD_AVATAR_BUILDER" = "Přidat fotku";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "Pozvat přátele";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "Pozvi další";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "Nová skupina";
