--- a/Signal/translations/el.lproj/Localizable.strings
+++ b/Signal/translations/el.lproj/Localizable.strings
@@ -2702,16 +2702,16 @@
 "GENERIC_INCOMING_MESSAGE_NOTIFICATION" = "Νέο μήνυμα!";
 
 /* Title for the 'Get Started' banner */
-"GET_STARTED_BANNER_TITLE" = "Ξεκινήστε";
+"GET_STARTED_BANNER_TITLE" = "Ξεκίνα";
 
 /* 'Get Started' button directing users to appearance */
 "GET_STARTED_CARD_APPEARANCE" = "Εμφάνιση";
 
 /* 'Get Started' button direction users to avatar builder */
-"GET_STARTED_CARD_AVATAR_BUILDER" = "Προσθήκη φωτογραφίας";
+"GET_STARTED_CARD_AVATAR_BUILDER" = "Βάλε φώτο";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "Πρόσκληση φίλων";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "Πρόσκληση";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "Νέα ομάδα";
