--- a/Signal/translations/gu.lproj/Localizable.strings
+++ b/Signal/translations/gu.lproj/Localizable.strings
@@ -2711,10 +2711,10 @@
 "GET_STARTED_CARD_AVATAR_BUILDER" = "ફોટો ઉમેરો";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "મિત્રોને આમંત્રિત કરો";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "આમંત્રણ આપો";
 
 /* 'Get Started' button directing users to create a group */
-"GET_STARTED_CARD_NEW_GROUP" = "નવું ગ્રુપ";
+"GET_STARTED_CARD_NEW_GROUP" = "નવું ગ્રૂપ";
 
 /* Error displayed when there is a failure fetching a GIF from the remote service. */
 "GIF_PICKER_ERROR_FETCH_FAILURE" = "વિનંતી કરેલ GIF લાવવામાં નિષ્ફળ. કૃપા કરીને ચકાસો કે તમે ઓનલાઇન છો.";
