--- a/Signal/translations/hi.lproj/Localizable.strings
+++ b/Signal/translations/hi.lproj/Localizable.strings
@@ -2708,10 +2708,10 @@
 "GET_STARTED_CARD_APPEARANCE" = "दिखावट";
 
 /* 'Get Started' button direction users to avatar builder */
-"GET_STARTED_CARD_AVATAR_BUILDER" = "तस्वीर जोड़े";
+"GET_STARTED_CARD_AVATAR_BUILDER" = "फ़ोटो जोड़ें";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "मित्रों को आमंत्रित करें";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "आमंत्रित";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "नया ग्रुप";
