--- a/Signal/translations/hr.lproj/Localizable.strings
+++ b/Signal/translations/hr.lproj/Localizable.strings
@@ -2702,7 +2702,7 @@
 "GENERIC_INCOMING_MESSAGE_NOTIFICATION" = "Nova poruka!";
 
 /* Title for the 'Get Started' banner */
-"GET_STARTED_BANNER_TITLE" = "Započnite";
+"GET_STARTED_BANNER_TITLE" = "Krenimo";
 
 /* 'Get Started' button directing users to appearance */
 "GET_STARTED_CARD_APPEARANCE" = "Izgled";
@@ -2711,7 +2711,7 @@
 "GET_STARTED_CARD_AVATAR_BUILDER" = "Dodaj sliku";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "Pozovi prijatelje";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "Dodaj nekoga";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "Nova grupa";
