--- a/Signal/translations/it.lproj/Localizable.strings
+++ b/Signal/translations/it.lproj/Localizable.strings
@@ -2708,7 +2708,7 @@
 "GET_STARTED_CARD_APPEARANCE" = "Aspetto";
 
 /* 'Get Started' button direction users to avatar builder */
-"GET_STARTED_CARD_AVATAR_BUILDER" = "Aggiungi foto";
+"GET_STARTED_CARD_AVATAR_BUILDER" = "Carica foto";
 
 /* 'Get Started' button directing users to invite friends */
 "GET_STARTED_CARD_INVITE_FRIENDS" = "Invita amici";
