--- a/Signal/translations/mr.lproj/Localizable.strings
+++ b/Signal/translations/mr.lproj/Localizable.strings
@@ -2711,7 +2711,7 @@
 "GET_STARTED_CARD_AVATAR_BUILDER" = "फोटो जोडा";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "मित्रांना आमंत्रित करा";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "आमंत्रित करा";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "नवीन गट";
