--- a/Signal/translations/ms.lproj/Localizable.strings
+++ b/Signal/translations/ms.lproj/Localizable.strings
@@ -2714,7 +2714,7 @@
 "GET_STARTED_CARD_INVITE_FRIENDS" = "Jemput rakan";
 
 /* 'Get Started' button directing users to create a group */
-"GET_STARTED_CARD_NEW_GROUP" = "Kumpulan baru";
+"GET_STARTED_CARD_NEW_GROUP" = "Grup baru";
 
 /* Error displayed when there is a failure fetching a GIF from the remote service. */
 "GIF_PICKER_ERROR_FETCH_FAILURE" = "Gagal mengambil GIF yang diminta. Sila sahkan anda sedang dalam talian.";
