--- a/Signal/translations/nb.lproj/Localizable.strings
+++ b/Signal/translations/nb.lproj/Localizable.strings
@@ -2705,13 +2705,13 @@
 "GET_STARTED_BANNER_TITLE" = "Kom i gang";
 
 /* 'Get Started' button directing users to appearance */
-"GET_STARTED_CARD_APPEARANCE" = "Utseende";
+"GET_STARTED_CARD_APPEARANCE" = "Design";
 
 /* 'Get Started' button direction users to avatar builder */
-"GET_STARTED_CARD_AVATAR_BUILDER" = "Legg til bilde";
+"GET_STARTED_CARD_AVATAR_BUILDER" = "Velg bilde";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "Inviter venner";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "Inviter";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "Ny gruppe";
