--- a/Signal/translations/pt_BR.lproj/Localizable.strings
+++ b/Signal/translations/pt_BR.lproj/Localizable.strings
@@ -2708,13 +2708,13 @@
 "GET_STARTED_CARD_APPEARANCE" = "Aparência";
 
 /* 'Get Started' button direction users to avatar builder */
-"GET_STARTED_CARD_AVATAR_BUILDER" = "Adicionar foto";
+"GET_STARTED_CARD_AVATAR_BUILDER" = "Foto";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "Convidar amigos(as)";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "Convidar";
 
 /* 'Get Started' button directing users to create a group */
-"GET_STARTED_CARD_NEW_GROUP" = "Novo grupo";
+"GET_STARTED_CARD_NEW_GROUP" = "Grupo";
 
 /* Error displayed when there is a failure fetching a GIF from the remote service. */
 "GIF_PICKER_ERROR_FETCH_FAILURE" = "Falha ao baixar o GIF requisitado. Por favor, verifique se você está on-line.";
