--- a/Signal/translations/pt_PT.lproj/Localizable.strings
+++ b/Signal/translations/pt_PT.lproj/Localizable.strings
@@ -2705,13 +2705,13 @@
 "GET_STARTED_BANNER_TITLE" = "Começar";
 
 /* 'Get Started' button directing users to appearance */
-"GET_STARTED_CARD_APPEARANCE" = "Aspeto";
+"GET_STARTED_CARD_APPEARANCE" = "Aparência";
 
 /* 'Get Started' button direction users to avatar builder */
-"GET_STARTED_CARD_AVATAR_BUILDER" = "Adicionar fotografia";
+"GET_STARTED_CARD_AVATAR_BUILDER" = "Foto perfil";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "Convidar amigos";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "Convidar";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "Novo grupo";
