--- a/Signal/translations/ro.lproj/Localizable.strings
+++ b/Signal/translations/ro.lproj/Localizable.strings
@@ -2708,10 +2708,10 @@
 "GET_STARTED_CARD_APPEARANCE" = "Aspect";
 
 /* 'Get Started' button direction users to avatar builder */
-"GET_STARTED_CARD_AVATAR_BUILDER" = "Adăugare poză";
+"GET_STARTED_CARD_AVATAR_BUILDER" = "Adaugă poză";
 
 /* 'Get Started' button directing users to invite friends */
-"GET_STARTED_CARD_INVITE_FRIENDS" = "Invită prieteni";
+"GET_STARTED_CARD_INVITE_FRIENDS" = "Invită";
 
 /* 'Get Started' button directing users to create a group */
 "GET_STARTED_CARD_NEW_GROUP" = "Grup nou";
