--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
+• Тепер під час виклику можна реагувати за допомогою емоджі. Усміхайтеся навіть з вимкненою камерою, шліть серця, коли сказане вражає в саме серденько, чи голосуйте за суші замість піци, не сказавши й слова. А якщо кілька учасників надішлють однакову реакцію одночасно, ви побачите справжній емоджійний спалах.
